--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ body {
 							<h2 style="font-weight: bold;">-About Taylor Swift-</h2>
 						</header><br><br><br>
 
-								<p style="font-size: 20px;"><span class="image left"><img src="images/ts5.jpg" alt="" style="width: 500px; height: 360px; padding-right: 40px; " /></span> <br>
+								<p style="font-size: 20px;"><span class="image left"><img src="images/ts5.jpg" alt="" style="width: 470px; height: 350px; padding-right: 40px; " /></span> <br>
 								Nama  : Taylor Swift Celestine <br><br>
 								Minat : Dunia tarik suara <br><br>
 								Bakat : Bernyanyi dan menulis lagu<br><br>
@@ -94,7 +94,7 @@ body {
 
 								<br><br><br><br>
 
-								<p style="font-size: 20px;"><span class="image right"><img src="images/ts6.png" alt="" style="width: 500px; height: 360px;" /></span>
+								<p style="font-size: 20px;"><span class="image right"><img src="images/ts7.jpeg" alt="" style="width: 440px; height: 360px;" /></span>
 								<br><br>
 								Idola/ Role Model: Najwa Shihab<br><br>
 								Alasan: Karena keberaniannya dalam mengemukakan pendapat, kegemarannya dalam menularkan minat baca dan sosoknya yang menginspirasi generasi muda.<br><br>
