--- a/future.html
+++ b/future.html
@@ -126,10 +126,10 @@
 							<img alt="" class="resize-image center-block" id="image1" src="images/f4.jpg" style="width: 300px; height: 300px;">
 						</div>
 						<div class="col-md-4">
-							<img alt="" class="resize-image center-block" id="image1" src="images/f5.jpg" style="width: 300px; height: 300px;">
+							<img alt="" class="resize-image center-block" id="image1" src="images/f5.jpeg" style="width: 300px; height: 300px;">
 						</div>
 						<div class="col-md-4">
-							<img alt="" class="resize-image center-block" id="image1" src="images/f6.jpg" style="width: 300px; height: 300px;">
+							<img alt="" class="resize-image center-block" id="image1" src="images/f6.jpeg" style="width: 300px; height: 300px;">
 						</div>
 
                   	</div>
