--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
                     <div class="container">
                         <div class="row" style="margin-left: 50px;">
                             <h3 style="width: 350px; margin-left: 150px;">FOLKLORE</h3>
-				            <h3>FUTURE</h3>
+				            <h3>EVERMORE</h3>
                         </div>
                     </div>
                     <div class="container">
@@ -100,8 +100,41 @@
                         </div>
                     </div>
                 </div>
+                <br><br>
+                <header class="align-center">
+                    <h2 style="color: black;">Achievements Album Folklore And Evermore</h2>
+                </header><br><br><br>
+                <div class="container">
+                    <div class="row" style="margin-left: 50px;">
+                        <h3 style="width: 350px; margin-left: 150px;">FOLKLORE</h3>
+                        <h3>EVERMORE</h3>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row" style="margin-left: 50px;">
+                        <img src="images/w1.jpg" alt="Snow" style="width: 340px; height: 300px; margin-left: 150px;">
+                        <img src="images/w2.png" alt="Snow" style="width: 340px; height: 300px;">
+                    </div>
+                </div><br><br>
+                <div class="container">
+                    <div class="row" style="margin-left: 50px;">
+                        <h3 style="width: 340px; height: 300px; margin-left: 150px;">
+                            •	Favorite Pop/Rock Album<br>
+                            •	Best International Artist (Folklore)<br>
+                            •	Most day-one streams of an album on Spotify (female)<br>
+                            •	Album of the Year Grammy
+                        </h3>
+                        <h3>
+                            •	Best 10 Albums of 2020<br>
+                            •	Best New Music of 2020	<br>
+                            •	The 50 Albums That Saved Us From 2020<br>
+                            •	Chris Willman's Best Albums of 2020
+                        </h3>     
+                    </div>
+                </div>
+
 			</section>
-            
+
 		<!-- Footer -->
 			<footer id="footer" style="background: black;">
 				<div class="container">
