--- a/work.html
+++ b/work.html
@@ -112,8 +112,8 @@
                 </div>
                 <div class="container">
                     <div class="row" style="margin-left: 50px;">
-                        <img src="images/w1.jpg" alt="Snow" style="width: 340px; height: 300px; margin-left: 150px;">
-                        <img src="images/w2.png" alt="Snow" style="width: 340px; height: 300px;">
+                        <img src="images/w1.jpg" alt="Snow" style="width: 300px; height: 270px; margin-left: 150px;">
+                        <img src="images/w2.png" alt="Snow" style="width: 300px; height: 270px; margin-left: 40px;">
                     </div>
                 </div><br><br>
                 <div class="container">
